--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 node_modules/
 config/
 client/dist/bundle.js
+package-lock.json
+/Users/andrewmitchell/Documents/hr-nyc/greenfield/myCopy/Flixmix/package-lock.json
