--- a/package.json
+++ b/package.json
@@ -11,16 +11,25 @@
   },
   "author": "Kingdom of Gondor",
   "license": "ISC",
+  "babel": {
+    "presets": [
+      "env",
+      "react",
+      "stage-2"
+    ]
+  },
   "devDependencies": {
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.3.2",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "react-beautiful-dnd": "^8.0.5",
-    "webpack": "^2.2.1"
+    "webpack": "^2.7.0"
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-loader": "^7.1.5",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
